# jhmcstanton.github.io

./: .gitignore  404.html  404.lhs  CNAME  README.md  about.html  about.rst  add_dailies.sh  archive.html  clobber.sh  contact.html  contact.markdown  deploy.sh  index.html  jhmcstanton-com.cabal  site.hs  stack.yaml  watch
_site/: about.html  archive.html  contact.html  index.html
_site/resume/: resume.tex
css/: 2020-10-01-strumming-patterns.css  abcjs-audio.css  default.css  fretboard-visualizer.css
posts/blog/: 2018-07-16-first-post.html  2018-07-16-first-post.markdown  2018-07-18-a-case-for-higher-kinded-types.markdown  2018-08-15-phantom-types-and-how-to-enhance-them.html  2018-08-15-phantom-types-and-how-to-enhance-them.markdown  2018-10-19-construct-not-create.html  2018-10-19-construct-not-create.markdown  2018-11-20-hacktoberfest-retrospective.html  2018-11-20-hacktoberfest-retrospective.markdown  2019-06-19-java-deconstruction-pattern.markdown  2019-09-14-literate-markdown-with-diagrams.html  2019-09-14-literate-markdown-with-diagrams.lhs  2019-09-14-literate-posts-with-diagrams.lhs  2019-09-15-state-driven-development-part-1.lhs  2019-09-18-literate-markdown-to-literate-html.html  2019-09-18-literate-markdown-to-literate-html.lhs  2019-09-19-performance-as-acceptance-criteria.html  2019-09-19-performance-as-acceptance-criteria.markdown  2019-09-23-read-a-paper-applicative-programming-with-effects.html  2019-09-23-read-a-paper-applicative-programming-with-effects.markdown  2019-10-09-hacktoberfest-2019.html  2019-10-09-hacktoberfest-2019.markdown  2019-12-13-advent-of-code.html  2019-12-13-advent-of-code.markdown  2020-01-28-2020-goals.html  2020-01-28-2020-goals.markdown  2020-05-04-2020-Goals-V2.html  2020-05-04-2020-Goals-V2.markdown  2020-10-15-hacktoberfest-2020.html  2020-10-15-hacktoberfest-2020.markdown  2020-11-16-diving-into-new-topics.html  2020-11-16-diving-into-new-topics.markdown  2020-11-24-dependent-units.html  2020-11-24-dependent-units.markdown  2020-12-01-advent-of-code.html  2020-12-01-advent-of-code.markdown  2020-12-04-being-an-ally.html  2020-12-04-being-an-ally.markdown  2020-12-18-commuting-is-wage-theft.html  2020-12-18-commuting-is-wage-theft.markdown  (+27 more)
posts/brews/: 2018-07-17-better-not-pout-mcstout.html  2018-07-17-better-not-pout-mcstout.markdown  2018-07-22-Knight-Rider-APA.html  2018-07-22-Knight-Rider-APA.markdown  2018-08-01-dwights-orange-honey-wheat.html  2018-08-01-dwights-orange-honey-wheat.markdown  2018-10-10-lets-build-a-mash-tun.html  2018-10-10-lets-build-a-mash-tun.markdown  2019-02-17-thanksgiving-winter-warmer.html  2019-02-17-thanksgiving-winter-warmer.markdown  2019-03-15-simple-california-common.html  2019-03-15-simple-california-common.markdown  2019-03-30-pineapple-mango-milkshake-ipa.html  2019-03-30-pineapple-mango-milkshake-ipa.markdown  2019-05-06-dwights-honey-orange-wheat-v2.html  2019-05-06-dwights-honey-orange-wheat-v2.markdown  2019-05-18-quarter-german-ale.html  2019-06-08-summer-saison.html  (+9 more)
resume/: resume.tex
scripts/: 2019-05-10-recipe-converter.js  2020-08-16-interval-practice.js  2020-09-04-chords.js  2020-10-01-strumming-patterns.js  2020-10-25-key-signature-practice.js  2021-03-07-fretboard-visualizer.js  abc_post.js  abcjs_basic_5.11.0-min.js  countdown.js
templates/: clock.html  contact.html  default.html  post.html
(+194 files in other folders)
