name:               jhmcstanton-com
version:            0.0.5.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , bytestring
                  , hakyll == 4.12.*
                  , hjsmin == 0.2.*
                  , jhmcstanton-com
  ghc-options:      -threaded
  default-language: Haskell2010

library
  hs-source-dirs: lib
  default-language: Haskell2010

  build-depends:     base      == 4.*
                   , hakyll    == 4.12.*
                   , text
                   , transformers
                   , webdriver == 0.8.5.*

  exposed-modules:   Site.Posts.Brews.Context
                   , Site.Posts.Brews.IO