name:               jhmcstanton-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base              == 4.*
                  , bytestring
                  , hakyll            >= 4.13
                  , hakyll-images     
                  , hakyll-typescript
                  , hakyll-process
                  , hjsmin            
                  , pandoc
                  , jhmcstanton-com
                  , optparse-applicative
  ghc-options:      -threaded
  default-language: Haskell2010

library
  hs-source-dirs: lib
  default-language: Haskell2010

  build-depends:     aeson           < 2
                   , base            == 4.*
                   , directory
                   , diagrams
                   , diagrams-lib
                   , diagrams-contrib
                   , diagrams-core
                   , diagrams-svg
                   , hakyll          > 4
                   , text
                   , transformers
                   , typed-process
                   , webdriver       == 0.9.0.*

  exposed-modules:   Site.Posts.Brews.Context
                   , Site.Posts.Brews.IO
                   , Site.Posts.Literate
                   , Site.Posts.Literate.Compile